# cinnamon

data/: org.cinnamon.gschema.xml
files/usr/share/cinnamon/cinnamon-settings/modules/: cs_backgrounds.py
files/usr/share/cinnamon/cinnamon-video-wallpaper/: cinnamon-video-wallpaper.in  cinnamon-video-wallpaper.py  meson.build
files/usr/share/dbus-1/services/: org.Cinnamon.VideoWallpaper.service
js/ui/: backgroundManager.js
